DTO tests passing